--- a/Journal/Daily/2024-07-22.md
+++ b/Journal/Daily/2024-07-22.md
@@ -14,36 +14,43 @@ Yesterday, you spent the day in a productive and familiar environment, engaging 
 
 ## Questions about yesterday
 
-1. You mentioned that reverting to pre-camp habits was something you observed but did not address any changes to improve them. What specific pre-camp habits do you consider bad or unproductive, and what concrete steps can you take tomorrow to start changing them?
+> You mentioned that reverting to pre-camp habits was something you observed but did not address any changes to improve them. What specific pre-camp habits do you consider bad or unproductive, and what concrete steps can you take tomorrow to start changing them?
 
-2. You had a calm day because you were in a familiar environment doing things you know. How do you plan to maintain that sense of calm and familiarity once you return to work after a week at summer camp? Are there any strategies or routines you can implement to ease this transition?
+I think that i was mainly talking about waching short form video and pushing myself too hard
 
-3. You mentioned a few key learnings today, including that building good software is hard and the news about Biden. How do you plan to apply this learning about building good software to your future projects, and are there any specific aspects of today's activities that highlighted this challenge for you?
+> You had a calm day because you were in a familiar environment doing things you know. How do you plan to maintain that sense of calm and familiarity once you return to work after a week at summer camp? Are there any strategies or routines you can implement to ease this transition?
+
+no I don't think so because because work is chaotic at the moment.
+
+> You mentioned a few key learnings today, including that building good software is hard and the news about Biden. How do you plan to apply this learning about building good software to your future projects, and are there any specific aspects of today's activities that highlighted this challenge for you?
+
+I found a lot of little mistakes in my crawler that show me that programming in the unknown is difficult
 
 ## What happened today?
 
-**What did you have for dinner**: 
-**Grade for the day**: 
-**Were you on time for work?**:
+**What did you have for dinner**: chinese
+**Grade for the day**: 6
+**Were you on time for work?**: yes bearly (0930)
 
 ## What did you do today?
 
-**Morning**: 
-**Afternoon**: 
-**After work**: 
-**Evening**: 
+**Morning**: filled out a lot of questionairs for the psycologist
+**Afternoon**: finished of the first task of the new project
+**After work**: drove to gouda to play dnd
+**Evening**: played dnd
 
 ## Reflections
 
 1. Reflecting on your activities from today, can you identify specific moments when you felt a strong emotion? How did you acknowledge and express that feeling? 
+I did not feel any strong emotions today
 
 2. What achievements or positive actions did you take pride in today? Were there any new skills or knowledge you gained that you are proud of?
+I noticed that a lot of decisions I made for the website were the correct ones
 
 3. Think back to any interactions or decisions today where you prioritized your own needs or desires. Were there opportunities where you chose to be more unapologetically assertive in advocating for yourself?
 
-4. Did you engage in any activity today that you found particularly meaningful or worthwhile? What was it, and how did it contribute to your sense of fulfillment?
+no opertunity arose
 
-5. Based on today’s experiences, what is one habit or practice you can implement or adjust to better align with your goals of self-awareness, pride, balancing self-interest, and daily meaningful pursuits? How do you plan to integrate this change moving forward?
 
 ## What did you learn today?
 
